overfull lines bisang

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@ draftmode,
 \input{localcommands.tex} 
 \addbibresource{volume-bib.bib}
 
-\KOMAoptions{draft=false} %no rulers in draftmode
+\KOMAoptions{draft=false, overfullrule=true} %no rulers in draftmode
 \includeonly{chapters/bisang}
 \begin{document}         
 \maketitle                
