--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@ draftmode,
 \addbibresource{volume-bib.bib}
 
 \KOMAoptions{draft=false, overfullrule=true} %no rulers in draftmode
-\includeonly{chapters/heusinger}
+\includeonly{chapters/schiattarella}
 \begin{document}         
 \maketitle                
 \frontmatter
