--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -13,13 +13,13 @@
 	note = {Unpublished ms.},
 	url = {https://www.radeksimik.eu/pdf/simik-dacice-definiteness.pdf},
 	title = {Definiteness and articleless languages},
-	urldate = {2018-19-11},
+	urldate = {2018-11-19},
 	year = {2014}
 }
 
-@unpublished{nikravan:14,
+@mastersthesis{nikravan:14,
 	author = {Nikravan, Pegah},
-	note = {Ottawa: Carleton University. (Master-thesis)},
+	note = {Ottawa: Carleton University},
 	title = {Semantics and processing of weak and strong definites in colloquial {P}ersian: {{E}}vidence from an offline questionnaire},
 	year = {2014}
 }
@@ -490,7 +490,7 @@
 	author = {Modarresi, Yahya},
 	booktitle = {The {O}xford handbook of {P}ersian linguistics},
 	editor = {Sedighi, Anousha and Shabani-Jadidi, Pouneh},
-	pages = {\biberror{no pages}},
+	doi = {10.1093/oxfordhb/9780198736745.013.13},
 	publisher = {Oxford University Press},
 	title = {Sociolinguistics},
 	year = {2018}
@@ -572,7 +572,7 @@
 	author = {Louali, Naïma},
 	booktitle = {Nouvelles études berbères. {L}e verbe et autres articles},
 	editor = {Naït-Zerrad, Kamal and Voßen, Rainer and Ibriszimow, Dymitr},
-	pages = {\biberror{no pages}},
+	pages = {67-77},
 	publisher = {Rüdiger Köppe Verlag},
 	series = {Berber {S}tudies},
 	number = {8},
@@ -662,7 +662,7 @@
 	author = {Karimi, Simin},
 	booktitle = {The {O}xford handbook of {P}ersian linguistics},
 	editor = {Sedighi, Anousha and Shabani-Jadidi, Pouneh},
-	pages = {\biberror{no pages}},
+	doi = {10.1093/oxfordhb/9780198736745.013.7},
 	publisher = {Oxford University Press},
 	title = {Generative approaches to syntax},
 	year = {2018}
@@ -708,7 +708,7 @@
 	booktitle = {The {O}xford handbook of information structure},
 	editor = {Féry, Caroline and Ishihara, Shinichiro},
 	doi = {10.1093/oxfordhb/42670.013.25},
-	pages = {\biberror{no pages}},
+	doi = {10.1093/oxfordhb/9780199642670.013.25},
 	publisher = {Oxford University Press},
 	title = {Information structure in {S}lavic},
 	year = {2014}
@@ -719,7 +719,7 @@
 	author = {Jasbi, Masoud},
 	booktitle = {Advances in {I}ranian linguistics},
 	editor = {Larson, Richard K. and Moradi, Sedigheh and Samiia, Vida},
-	pages = {\biberror{no pages}},
+	pages = {107-118},
 	publisher = {John Benjamins},
 	title = {The suffix that makes {F}arsi nouns unique},
 	year = {2020}
@@ -730,7 +730,7 @@
 	author = {Jasbi, Masoud},
 	booktitle = {Advances in {I}ranian linguistics},
 	editor = {Larson, Richard K. and Moradi, Sedigheh and Samiia, Vida},
-	pages = {\biberror{no pages}},
+	pages = {119-135},
 	publisher = {John Benjamins},
 	title = {The meaning of the {P}ersian object marker r{\=a}: {W}hat it is not, and what it (probably) is},
 	year = {2020}
@@ -1437,7 +1437,7 @@
 @book{galkina:fedoruk:63,
 	address = {Moscow},
 	author = {Galkina-Fedoruk, Evdokia M.},
-	publisher = {\biberror{no publisher}},
+	publisher = {Izdat. Moskovskogo Univ.},
 	title = {Vyraženije neopredelënnosti v russkom jazyke neopredelënnymi mesoimenijami i narečijami},
 	year = {1963}
 }
@@ -1909,7 +1909,7 @@
 @article{peng:04,
 	author = {Peng, Danling},
 	journal = {Contemporary Linguistics},
-	pages = {\biberror{no pages}},
+	url = {http://en.cnki.com.cn/Article_en/CJFDTOTAL-DDYX200404001.htm},
 	title = {Cognitive processing of the {C}hinese language and its neural mechanism},
 	volume = {2004-04},
 	year = {2004}
