--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[output=book,collection,collectionchapter,multiauthors,
 colorlinks, citecolor=brown,
 % draft,
-draftmode,
+% draftmode,
 ]{./langscibook}
 
 
@@ -9,10 +9,10 @@ draftmode,
 \input{localpackages.tex}
 \input{localhyphenation.tex}
 \input{localcommands.tex} 
-\addbibresource{volume-bib.bib}
+\addbibresource{localbibliography.bib}
 
 \KOMAoptions{draft=false, overfullrule=true} %no rulers in draftmode
-\includeonly{chapters/schiattarella}
+% \includeonly{chapters/heusinger}
 \begin{document}         
 \maketitle                
 \frontmatter
