--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -261,24 +261,22 @@
 
 @incollection{vonheus:19,
 	address = {Oxford},
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	booktitle = {The {O}xford handbook of reference},
 	editor = {Gundel, Jeanette and Abbott, Barbara},
 	pages = {146--167},
 	publisher = {Oxford University Press},
-	sortkey = {Heusinger},
 	title = {Indefiniteness and specificity},
 	year = {2019}
 }
 
 @incollection{vonheus:11url,
 	address = {Berlin},
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	booktitle = {Semantics. {A}n international handbook of natural language meaning},
-	editor = {{v}on Heusinger, Klaus and Maienborn, Claudia and Portner, Paul},
+	editor = {von Heusinger, Klaus and Maienborn, Claudia and Portner, Paul},
 	pages = {1025--1058},
 	publisher = {Mouton De Gruyter},
-	sortkey = {Heusinger},
 	title = {Specificity},
 	volume = {2 (HSK 33.2)},
 	year = {2011}
@@ -286,12 +284,11 @@
 
 @incollection{vonheus:11,
 	address = {Berlin},
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	booktitle = {Semantics: {A}n international handbook of natural language meaning},
-	editor = {{v}on Heusinger, Klaus and Maienborn, Claudia and Portner, Paul},
+	editor = {von Heusinger, Klaus and Maienborn, Claudia and Portner, Paul},
 	pages = {1025--1058},
 	publisher = {Mouton De Gruyter},
-	sortkey = {Heusinger},
 	title = {Specificity},
 	volume = {2},
 	year = {2011}
@@ -535,7 +532,7 @@
 	address = {Cambridge},
 	author = {Lyons, John},
 	booktitle = {Formal semantics of natural language},
-	editor = {Keenan, Edward L. },
+	editor = {Keenan, Edward L.},
 	pages = {61--83},
 	publisher = {Cambridge University Press},
 	title = {Deixis as the source of reference},
@@ -927,7 +924,7 @@
 
 @incollection{egli:vonheus:95,
 	address = {Amsterdam/Philadelphia},
-	author = {Egli, Urs and {v}on Heusinger, Klaus},
+	author = {Egli, Urs and von Heusinger, Klaus},
 	booktitle = {Lexical knowledge in the organization of language},
 	editor = {Egli, Urs and Pause, Peter and Schwarze, Christoph and v{o}n Stechow, Arnim and Wienold, Götz},
 	pages = {121--141},
@@ -1694,54 +1691,53 @@
 }
 
 @article{vonheus:schum:19,
-	author = {{v}on Heusinger, Klaus and Schumacher, Petra B. },
+	author = {von Heusinger, Klaus and Schumacher, Petra B. },
 	journal = {Journal of Pragmatics},
 	pages = {117--127},
-	sortkey = {Heusinger},
 	title = {Discourse prominence: {D}efinition and application},
 	volume = {154},
 	year = {2019}
 }
 
 @article{vonheus:97,
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	journal = {The Prague Bulletin of Mathematical Linguistics},
 	pages = {5--23},
-	sortkey = {Heusinger},
 	title = {Salience and definiteness},
 	volume = {67},
 	year = {1997}
 }
 
 @article{vonheus:02url,
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	journal = {Journal of Semantics},
 	number = {3},
 	pages = {245--274},
-	sortkey = {Heusinger},
 	title = {Specificity and definiteness in sentence and discourse structure},
 	volume = {19},
 	year = {2002}
 }
 
 @article{vonheus:02,
-	author = {{v}on Heusinger, Klaus},
+	author = {von Heusinger, Klaus},
 	journal = {Journal of Semantics},
 	number = {3},
 	pages = {245--274},
-	sortkey = {Heusinger},
 	title = {Specificity and definiteness in sentence and discourse structure},
 	volume = {19},
 	year = {2002}
 }
 
-@article{verkuyl:98,
+@incollection{verkuyl:98,
 	author = {Verkuyl, Henk J.},
-	journal = {UiL Working Papers},
-	volume = {February 1998},
-	pages = {\biberror{no pages}},
+	booktitle = {Topics in {South Slavic} Syntax and Semantics},
+	editor = {Mila Dimitrova-Vulchanova and Lars Hellan},
+	pages = {125-162},
 	title = {Tense, aspect and aspectual composition},
-	year = {1998}
+	year = {1999},
+	doi = {https://doi.org/10.1075/cilt.172.07ver},
+	address = {Amsterdam},
+	publisher = {John Benjamins}
 }
 
 @article{tawa:93,
